<resources>
    <string name="app_name">AI CAL TRACKER</string>
    <string name="motto">Keep track of your nutrition!</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="test_number">1000</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="login_successful">Log in successful.</string>
    <string name="login_failed">Log in failed.</string>

    <string name="recently_eaten">Recently eaten</string>
    <string name="you_haven_t_uploaded_any_food">You haven\'t uploaded any food</string>
    <string name="start_tracking_today_s_meals_by_taking_a_quick_pictures">Start tracking Today\'s meals by taking a quick pictures</string>
    <string name="fats_left">Fats left</string>
    <string name="_10g">10g</string>
    <string name="protein_left">Protein left</string>
    <string name="carbs_left">Carbs left</string>
    <string name="calories_left">Calories left</string>
    <string name="carbs">Carbohydrates</string>
    <string name="fats">Fats</string>
    <string name="proteins">Proteins</string>
    <string name="_1887">1887</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>"
    <string name="ai_cal_tracker_logo">AI CAL TRACKER Logo</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthdate">Birthdate </string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="activity_level_question">What is your activity level?</string>
    <string name="activity_level">Activity Level</string>
    <string name="no_activity">No Activity\nMinimal effort, resting, desk job, or driving.</string>
    <string name="low_activity">Low Activity\nSome effort, standing sometimes, light work.</string>
    <string name="medium_activity">Active\nModerate effort, regular exercise or physical work.</string>
    <string name="high_activity">Very Active\nHigh effort, intense exercise, or heavy labor.</string>
    <string name="confirm">Confirm and sign up</string>
    <string name="sign_in_reminder">Already have an account? Sign in</string>
    <string name="create_account">Create your account</string>
    <string name="back">Back</string>
    <string name="personal_info">Tell us about yourself</string>
    <string name="body_fat">Body Fat</string>
    <string name="welcome">Welcome, %s</string>
    <string name="all_fields_required">Please fill out all required fields.</string>
    <string name="invalid_number_input">Please enter valid numeric values.</string>
    <string name="please_select_gender">Please select a gender.</string>
    <string name="please_select_activity">Please select an activity level.</string>
    <string name="invalid_birthdate_format">Invalid birthdate format (dd-mm-yyyy)</string>
    <string name="invalid_weight">Weight must be between 0 and 200</string>
    <string name="invalid_height">Height must be between 0 and 250</string>
    <string name="invalid_body_fat">Body fat percentage must be between 0 and 100</string>
    <string name="birthdate_required">Birthdate is required.</string>
    <string name="invalid_birthdate">Invalid birthdate format. Please use dd-mm-yyyy format.</string>
    <string name="weight_required">Weight is required.</string>
    <string name="height_required">Height is required.</string>
    <string name="body_fat_required">Body fat percentage is required.</string>
    <string name="gender_required">Gender selection is required.</string>
    <string name="name_required">Name required</string>
    <string name="surname_required">Surname required</string>
    <string name="email_required">Email required</string>
    <string name="password_required">Password required</string>
    <string name="invalid_name">Please enter a valid name</string>
    <string name="invalid_surname">Please enter a valid surname</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="password_too_short">Password must be at least 6 characters</string>

    <string name="daily_calorie">Daily Calorie</string>
    <string name="macronutrients">Macronutrients</string>
    <string name="water_tracking">Water Tracking</string>
    <string name="calorie_goals">Calorie Goals</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="weight_maintenance">Weight Maintain</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="liter">/%.2f Liter</string>
    <string name="cm">%d cm</string>
    <string name="kg">%d kg</string>
    <string name="percent">%d %%</string>
    <string name="total_kcal_number">/%d kcal </string>
    <string name="total_gram_number">/%d g </string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="home_page">Home Page</string>
    <string name="logout">Logout</string>

    <string name="edit_title">Edit %s</string>
    <string name="edit_message">Please enter a new value.</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>

    <string name="edit_success">Your information has been successfully updated.</string>


    <string name="image_uploading">Image is uploading…</string>
    <string name="image_uploaded">"Image Uploaded Successfully"</string>
    <string name="upload_error">"Upload Error: "</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>

    <string name="dish_name">Dish Name: </string>
    <string name="ai_advice_hint">AI recommendation</string>
    <string name="user_note_hint">Add a note about this food..</string>
    <string name="analyze_button">Analyze</string>
    <string name="save_button">Save</string>
    <string name="total_calories_format">Total Calories: %1$d kcal</string>
    <string name="protein_format">%1$dg Protein</string>
    <string name="carbs_format">%1$dg Carbs</string>
    <string name="fat_format">%1$dg Fat</string>
    <string name="analyzing_image">Analyzing image..</string>
    <string name="analysis_complete">Analysis complete</string>
    <string name="image_load_error">Could not load image</string>
    <string name="data_processing_error">Data processing error: %1$s</string>
    <string name="error_message">Error: %1$s</string>
    <string name="image_processing_error">Error processing image: %1$s</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="change_language">Change Language</string>
    <string name="language_flag">Language Flag</string>
    <string name="language_en">English</string>
    <string name="language_tr">Turkish</string>
    <string name="language_title">Choose Language</string>
    <string name="food_name">Food Name</string>
</resources>