<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="32sp"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/signUpSubtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_info"
        android:textSize="16sp"
        android:textColor="?attr/colorSecondary"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/signUpText"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/gender"
        android:textColor="?attr/colorSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/genderGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpSubtext" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderLabel">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/male"
            android:textSize="16sp"
            android:textColor="?attr/colorSecondary"
            android:padding="16dp"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:drawableStart="@drawable/ic_male"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"/>

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="16sp"
            android:textColor="?attr/colorSecondary"
            android:padding="16dp"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:drawableStart="@drawable/ic_female"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdateTextField"
        style="@style/RoundedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthdate"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/genderGroup"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:background="@drawable/edit_text_background"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightTextField"
        style="@style/RoundedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/birthdateTextField"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/edit_text_background"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightTextField"
        style="@style/RoundedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/weightTextField"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/edit_text_background"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bodyFatTextField"
        style="@style/RoundedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/body_fat"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/heightTextField"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bodyFatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/edit_text_background"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/back"
        android:textColor="?attr/colorOnSecondary"
        app:icon="@drawable/ic_arrow_back"
        app:iconGravity="start"
        app:iconTint="?attr/colorOnSecondary"
        app:layout_constraintEnd_toStartOf="@id/nextButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/bodyFatTextField" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/next"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        app:icon="@drawable/ic_arrow_forward"
        app:iconTint="?attr/colorOnSecondary"
        app:iconGravity="end"
        app:layout_constraintTop_toBottomOf="@id/bodyFatTextField"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>